add: multisig test